Added field "description" into task form

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,10 @@ block content
       | Tytuł
     br
     input(type="text" id="title" name="title")
+    <br>
+    label(for="desc")
+          | Opis zadania
+    br
+    input(type="textarea" id="desc" name="desc")
     br
     input(type="submit", value="Dodaj")
