--- a/views/index.pug
+++ b/views/index.pug
@@ -29,3 +29,4 @@ block content
             td= (task.status == 'completed' ? 'Zakończone' : 'Otwarte')
             td
                 button(type="button" onclick=`updateTaskStatus('${task.id}', 'completed')`) ✓
+                button(type="button" onclick=`deleteTask('${task.id}')`) x
